[package]
name = "rtail"
version = "0.1.0"
authors = ["Relaed <knarfytrebil@gmail.com>"]
description = "read remote files over http / https"
keywords = ["rtail", "tail", "https", "rust"]
homepage = "https://github.com/knarfytrebil/rtail"
repository = "https://github.com/knarfytrebil/rtail"
documentation = "https://github.com/knarfytrebil/rtail"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.23"
ctrlc = "3.1.3"
clap = { version = "~2.33.0", features = ["yaml"] }
