[package]
name = "rtail"
version = "0.1.6"
authors = ["Relaed <knarfytrebil@gmail.com>"]
description = "read remote files over http / https"
keywords = ["rtail", "tail", "https", "rust"]
homepage = "https://github.com/knarfytrebil/rtail"
readme = "README.md"
repository = "https://github.com/knarfytrebil/rtail"
documentation = "https://github.com/knarfytrebil/rtail"
license = "MIT"
edition = "2018"

[dependencies]
curl = "0.4.25"
ctrlc = "3.1.3"
clap = { version = "~2.33.0", features = ["yaml"] }

[badges]
travis-ci = { repository = "knarfytrebil/rtail" }
